--- a/src/components/DefaultNav/DefaultNav.scss
+++ b/src/components/DefaultNav/DefaultNav.scss
@@ -9,11 +9,10 @@
         align-items: center;
         max-width: 1100px;
     }
-    h1 {
-        color: var(--text-color-2);
-        padding: 12px;
-        width: fit-content;
+    img {
+        height: 52px;
         cursor: pointer;
+        padding: 4px;
     }
     .nav-link {
         text-decoration: none;
