--- a/src/components/Auth/AuthForm.scss
+++ b/src/components/Auth/AuthForm.scss
@@ -56,6 +56,8 @@
     .submit-btn:hover {
         background-color: var(--btn-blue-hover-1);
     }
+    .google-icon {
+    }
     .link-wrapper {
         padding: 20px;
         font-size: 12pt;
