--- a/src/Pages/RankingsPage/RankingsPage.scss
+++ b/src/Pages/RankingsPage/RankingsPage.scss
@@ -1,16 +1,26 @@
 .rankings-page {
 
-    .filters-wrapper {
+    .options-wrapper {
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        justify-content: space-between;
 
-        .search, .position-filter {
+        .filters-wrapper {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .search, .position-filter, .edit-button {
             align-self: flex-end;
+        }
+        .select-filter {
+            margin-right: 20px;
+        }
+        .edit-button {
+            justify-self: flex-end;
         }
     }
     .content {
-        box-shadow: var(--box-shadow-1);
         display: flex;
         flex-direction: column;
         max-width: 700px;
