--- a/src/Pages/RankingsPage/RankingsPage.scss
+++ b/src/Pages/RankingsPage/RankingsPage.scss
@@ -1,4 +1,7 @@
 .rankings-page {
+    h1 {
+        margin-bottom: 20px;
+    }
 
     .options-wrapper {
         display: flex;
@@ -27,5 +30,11 @@
         margin-left: auto;
         margin-right: auto;
         border-radius: 4px;
+    }
+    .rankings-table {
+        margin-top: 20px;
+    }
+    .position-filter {
+        margin-top: 10px;
     }
 }
