--- a/src/components/EditButton/EditButton.scss
+++ b/src/components/EditButton/EditButton.scss
@@ -6,6 +6,13 @@
     padding: 10px;
     border-radius: 4px;
     height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .new-icon {
+        margin-right: 4px;
+    }
 }
 .edit-button:hover {
     background-color: var(--link-color-hover-1);
