--- a/src/components/RankingsList/RankingsList.scss
+++ b/src/components/RankingsList/RankingsList.scss
@@ -31,10 +31,15 @@
         flex: 2;
         padding: 8px 8px 8px 16px;
     }
-    input {
-        margin: 10px;
+    .rankings-options-btn {
+        margin: 5px;
+        padding: 5px;
         height: 1.2em;
         width: 1.2em;
+    }
+    .rankings-options-btn:hover {
+        background-color: var(--lightgrey);
+        border-radius: 50%;
     }
     .last-update {
         font-size: 10pt;
