--- a/src/components/Auth/AuthForm.scss
+++ b/src/components/Auth/AuthForm.scss
@@ -30,16 +30,9 @@
     .text-input label {
         font-size: 10pt;
     }
-    .google-auth-btn {
-        background-color: var(--google-btn-color);
-        color: white;
-        border: none;
-        padding: 10px;
-        margin: 10px;
-        font-size: 11pt;
-        font-weight: 600;
-        border-radius: 4px;
-        cursor: pointer;
+    .google-auth-wrapper {
+        display: flex;
+        justify-content: center;
     }
     .submit-btn {
         background-color: var(--btn-blue-1);
@@ -55,8 +48,6 @@
     }
     .submit-btn:hover {
         background-color: var(--btn-blue-hover-1);
-    }
-    .google-icon {
     }
     .link-wrapper {
         padding: 20px;
