--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -46,4 +48,5 @@ html {
   --link-color-light-1: #635AFF;
   --link-color-hover-light-1: #1a1f35;
   --table-header-blue-light: #EAF0FF;
+  --orbitron-font: 'Orbitron', sans-serif;
 }
