--- a/src/components/CustomRankingsList/CustomRankingsList.scss
+++ b/src/components/CustomRankingsList/CustomRankingsList.scss
@@ -44,4 +44,48 @@
     .last-update {
         font-size: 10pt;
     }
+    .dropdown {
+        position: relative;
+        display: inline-block;
+
+        .hidden {
+            display: none;
+        }
+        .dropdown-content {
+            display: block;
+            position: absolute;
+            left: 0;
+            background-color: white;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            border-radius: 6px;
+            :first-child {
+                border-radius: 6px 6px 0px 0px;
+            }
+            :last-child {
+                border-radius: 0px 0px 6px 6px;
+            }
+            a {
+                color: black;
+                padding: 10px 12px;
+                text-decoration: none;
+                display: block;
+                font-size: 11pt;
+            }
+            a:hover {
+                background-color: var(--table-header-color);
+            }
+        }
+        .dropbtn {
+            padding: 6px;
+            border: 2px solid white;
+            background: none;
+            border-radius: 50%;
+            color: white;
+            height: 34px;
+            width: 34px;
+            cursor: pointer;
+        }
+    }
 }
