Delete custom ranking on custom rankings list.

--- a/src/components/Rankings/Rankings.scss
+++ b/src/components/Rankings/Rankings.scss
@@ -1,6 +1,7 @@
 .rankings-table {
     border-spacing: 0;
     min-width: 400px;
+    background-color: white;
     thead tr {
         background-color: var(--lightgrey);
     }
