--- a/src/components/Auth/AuthForm.scss
+++ b/src/components/Auth/AuthForm.scss
@@ -11,6 +11,7 @@
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    background-color: white;
 
     h2 {
         font-weight: 600;
