--- a/src/components/CustomRankingsList/CustomRankingsList.scss
+++ b/src/components/CustomRankingsList/CustomRankingsList.scss
@@ -66,14 +66,19 @@
             :last-child {
                 border-radius: 0px 0px 6px 6px;
             }
-            a {
+            button {
                 color: black;
                 padding: 10px 12px;
                 text-decoration: none;
                 display: block;
                 font-size: 11pt;
+                width: 100%;
+                border: None;
+                cursor: pointer;
+                background-color: white;
+                text-align: left;
             }
-            a:hover {
+            button:hover {
                 background-color: var(--table-header-color);
             }
         }
