Template selector component and dynamically fetch rankings formats.

--- a/src/Pages/EditRankingPage/EditRankingPage.scss
+++ b/src/Pages/EditRankingPage/EditRankingPage.scss
@@ -1,3 +1,12 @@
 .edit-ranking-page {
-    
+    .title-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: fit-content;
+    }
+    .edit-btn {
+        margin: auto;
+        height: fit-content;
+    }
 }
