Still debugging cache issues after title update.

--- a/src/components/EditButton/EditButton.scss
+++ b/src/components/EditButton/EditButton.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 12pt;
 
     .new-icon {
         margin-right: 4px;
