--- a/src/components/Auth/AuthForm.scss
+++ b/src/components/Auth/AuthForm.scss
@@ -13,6 +13,24 @@
     padding-right: 20px;
     background-color: white;
 
+    .error-message-wrapper {
+        display: flex;
+        align-items: center;
+        color: red;
+        font-size: 11pt;
+        padding-left: 10px;
+        
+        .error-icon {
+            margin-right: 6px;
+        }
+    }
+
+    .loading-spinner {
+
+        margin: -20px;
+        padding: -20px;
+    }
+
     h2 {
         font-weight: 600;
         font-size: 20pt;
@@ -46,6 +64,22 @@
         cursor: pointer;
         margin: 10px;
         margin-top: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 40px;
+
+        div {
+            height: 50%;
+            display: flex;
+
+            div {
+                top: 0;
+                height: 10px;
+                width: 10px;
+                font-size: 8pt;
+            }
+        }
     }
     .submit-btn:hover {
         background-color: var(--btn-blue-hover-1);
