--- a/src/components/EditButton/EditButton.scss
+++ b/src/components/EditButton/EditButton.scss
@@ -10,10 +10,7 @@
     justify-content: center;
     align-items: center;
     font-size: 12pt;
-
-    .new-icon {
-        margin-right: 4px;
-    }
+    font-weight: 600;
 }
 .edit-button:hover {
     background-color: var(--link-color-hover-1);
