--- a/src/Pages/EditRankingPage/EditRankingPage.scss
+++ b/src/Pages/EditRankingPage/EditRankingPage.scss
@@ -1,6 +1,54 @@
 .edit-ranking-page {
-    .title-wrapper {
+    .content {
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
     }
-    .edit-btn {
+    .title-wrapper {
+        display: flex;
+        align-items: center;
+
+        h1, input {
+            margin-right: 10px;
+            font-size: 22pt !important;
+            font-weight: 700;
+        }
+        .edit-btn {
+            color: var(--btn-blue-1);
+            cursor: pointer;
+        }
+        input {
+            font-size: 16pt;
+        }
+    }
+    .save-wrapper {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 10px;
+    }
+    .autosave-wrapper {
+        margin-right: 10px;
+    }
+    .submit-btn, .cancel-btn {
+        border: none;
+        padding: 10px;
+        border-radius: 4px;
+        font-weight: 600;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+    .submit-btn:not(.disabled), .cancel-btn:not(.disabled) {
+        cursor: pointer;
+    }
+    .submit-btn:not(.disabled) {
+        background-color: var(--submit-btn-light-1);
+        color: white;
+    }
+    .submit-btn:not(.disabled):hover {
+        background-color: var(--submit-btn-hover-light-1);
+    }
+    .cancel-btn, .submit-btn.disabled {
+        background-color: var(--lightgrey);
     }
 }
