--- a/src/Pages/EditRankingPage/EditRankingPage.scss
+++ b/src/Pages/EditRankingPage/EditRankingPage.scss
@@ -4,6 +4,17 @@
         margin-left: auto;
         margin-right: auto;
     }
+    .drag-drop-rankings {
+        .draftable {
+            max-width: 700px;
+            border: 1px solid black;
+            margin: 5px;
+            padding: 5px;
+        }
+        .draftable:hover {
+            background-color: var(--table-header-color);
+        }
+    }
     .title-wrapper {
         display: flex;
         align-items: center;
