Fully functioning tiers for ALL, WIP for positional tiers.

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,4 +49,6 @@ html {
   --link-color-hover-light-1: #1a1f35;
   --table-header-blue-light: #EAF0FF;
   --orbitron-font: 'Orbitron', sans-serif;
+  --btn-green-1: #66bb6a;
+  --btn-green-2: #388E3C;
 }
