--- a/src/components/Draftable/Draftable.scss
+++ b/src/components/Draftable/Draftable.scss
@@ -2,10 +2,28 @@
     max-width: 700px;
     border: 1px solid black;
     margin: 5px;
-    padding: 5px;    
+    padding: 5px;
+
+    .drag-icon, .delete-icon {
+        font-size: 1.5em;
+    }
+    .delete-icon:hover {
+        cursor: pointer;
+    }
 }
 .draftable, .tier:not(.top-tier) {
     cursor: grab;
+}
+.draftable, .tier {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 .draftable {
     background-color: white;
