--- a/src/components/Draftable/Draftable.scss
+++ b/src/components/Draftable/Draftable.scss
@@ -1,8 +1,6 @@
 .draftable, .tier {
     max-width: 700px;
-    border: 1px solid black;
-    margin: 5px;
-    padding: 5px;
+    padding: 10px;
 
     .drag-icon, .delete-icon {
         font-size: 1.5em;
@@ -27,6 +25,9 @@
 }
 .draftable {
     background-color: white;
+    border: 1px solid var(--lightgrey);
+    border-left: 2px solid var(--lightgrey);
+    border-right: 2px solid var(--lightgrey);
 }
 .draftable:hover {
     background-color: var(--table-header-color);
@@ -36,5 +37,21 @@
 }
 .tier {
     background-color: var(--btn-blue-1);
+    border: 1px solid var(--btn-blue-1);
+    border-left: 2px solid var(--btn-blue-1);
+    border-right: 2px solid var(--btn-blue-1);
     color: white;
+}
+.insert-tier-btn {
+    color: var(--btn-blue-1);
+    background: none;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    .insert-icon {
+        margin-right: 8px;
+    }
 }
