Link to edit rankings page from custom rankings page.

--- a/src/components/Draftable/Draftable.scss
+++ b/src/components/Draftable/Draftable.scss
@@ -90,7 +90,8 @@
     color: white;
     background: var(--btn-blue-1);
     border: none;
-    padding: 4px;
+    padding: 3px 8px 3px 8px;
+    font-size: 9pt;
     font-weight: 600;
     display: flex;
     border-radius: 20px;
