--- a/src/components/CustomRankingsList/CustomRankingsList.scss
+++ b/src/components/CustomRankingsList/CustomRankingsList.scss
@@ -7,7 +7,6 @@
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid var(--lightgrey);
-        cursor: pointer;
     }
     .row:hover {
         background-color: var(--table-header-color);
@@ -16,6 +15,8 @@
         color: var(--btn-blue-1);
         font-weight: 600;
         padding: 2px;
+        cursor: pointer;
+        width: fit-content;
     }
     .rankings-details {
         display: flex;
