convert epoch to time ago. add sport icon to custom ranking list. fix first and last borders for edit rankings page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,4 +51,5 @@ html {
   --orbitron-font: 'Orbitron', sans-serif;
   --btn-green-1: #66bb6a;
   --btn-green-2: #388E3C;
+  --dark-red: #880808;
 }
