--- a/src/Pages/EditRankingPage/EditRankingPage.scss
+++ b/src/Pages/EditRankingPage/EditRankingPage.scss
@@ -77,5 +77,13 @@
         width: 100%;
         max-width: 80vw;
         justify-content: center;
+
+        .table-header {
+            border-top: 2px solid var(--lightgrey);
+        }
+
+        .draftable:last-child {
+            border-bottom: 2px solid var(--lightgrey);
+        }
     }
 }
