--- a/src/Pages/EditRankingPage/EditRankingPage.scss
+++ b/src/Pages/EditRankingPage/EditRankingPage.scss
@@ -80,6 +80,13 @@
 
         .table-header {
             border-top: 2px solid var(--lightgrey);
+            max-width: max(700px, 80%);
+            padding: 8px;
+            font-size: 10pt;
+            background-color: white;
+            border: 1px solid var(--lightgrey);
+            border-left: 2px solid var(--lightgrey);
+            border-right: 2px solid var(--lightgrey);
         }
 
         .draftable:last-child {
