--- a/src/components/Rankings/Rankings.scss
+++ b/src/components/Rankings/Rankings.scss
@@ -2,6 +2,8 @@
     border-spacing: 0;
     min-width: 400px;
     background-color: white;
+    box-shadow: var(--box-shadow-1);
+
     thead tr {
         background-color: var(--lightgrey);
     }
@@ -27,7 +29,7 @@
         }
     }
     tbody tr:nth-child(even) {
-        background-color: #f1f1f1;
+        background-color: #FAFAFA;
     }
     th {
         cursor: pointer;
