--- a/src/Pages/CustomRankingsPage/CustomRankingsPage.scss
+++ b/src/Pages/CustomRankingsPage/CustomRankingsPage.scss
@@ -10,6 +10,10 @@
         justify-content: space-between;
         align-items: center;
         margin-top: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+    }
+    .description {
+        margin-left: 3px;
+        margin-top: 10px;
     }
 }
