--- a/src/Pages/RankingsPage/RankingsPage.scss
+++ b/src/Pages/RankingsPage/RankingsPage.scss
@@ -2,6 +2,9 @@
     h1 {
         margin-bottom: 10px;
     }
+    .description {
+        margin-bottom: 10px;
+    }
 
     .options-wrapper {
         display: flex;
