--- a/src/components/CustomRankingsList/CustomRankingsList.scss
+++ b/src/components/CustomRankingsList/CustomRankingsList.scss
@@ -1,9 +1,10 @@
 .custom-rankings-list {
-    max-width: 700px;
+    width: 700px;
+    max-width: 90vw;
     margin: auto;
 
     .row {
-        height: 80px;
+        height: 74px;
     }
 
     .row, .col-labels {
@@ -37,7 +38,6 @@
         padding: 8px 8px 8px 16px;
     }
     .rankings-options-btn {
-        margin: 5px;
         padding: 5px;
         height: 1.2em;
         width: 1.2em;
@@ -53,7 +53,8 @@
     .dropdown {
         position: relative;
         display: inline-block;
-        margin-right: 20px;
+        margin-left: 2%;
+        margin-right: 2%;
         cursor: pointer;
 
         .hidden {
@@ -68,6 +69,7 @@
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
             border-radius: 6px;
+
             :first-child {
                 border-radius: 6px 6px 0px 0px;
             }
