--- a/src/components/CustomRankingsList/CustomRankingsList.scss
+++ b/src/components/CustomRankingsList/CustomRankingsList.scss
@@ -118,4 +118,12 @@
             color: white;
         }
     }
+    .last-update {
+        margin-right: 4px;
+    }
+    .col-labels {
+        .last-update {
+            color: var(--grey);
+        }
+    }
 }
