--- a/src/components/DefaultNav/DefaultNav.scss
+++ b/src/components/DefaultNav/DefaultNav.scss
@@ -1,7 +1,8 @@
 .default-nav {
     background-color: var(--nav-color);
-    margin-bottom: 20px;
+    margin-bottom: 35px;
     width: 100%;
+    
     nav {
         margin: auto;
         display: flex;
@@ -22,6 +23,10 @@
         border: none;
         background: none;
         font-size: 0.9em;
+        font-weight: 500;
+    }
+    .nav-link:hover {
+        color: var(--lightgrey);
     }
 }
 
