--- a/src/components/SelectFilter/SelectFilter.scss
+++ b/src/components/SelectFilter/SelectFilter.scss
@@ -4,6 +4,7 @@
         font-size: 11pt;
         font-weight: 600;
         color: var(--dark-grey);
+        margin-bottom: 2px;
     }
     .select-filter-input {
         width: 160px;
