Main utility class to wrap content.

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,3 +53,11 @@ html {
   --btn-green-2: #388E3C;
   --dark-red: #880808;
 }
+
+// UTILITY CLASSES
+main {
+  width: 800px;
+  max-width: 94%;
+  margin-right: auto;
+  margin-left: auto;
+}
