--- a/src/components/Nav/MobileNav/MobileNav.scss
+++ b/src/components/Nav/MobileNav/MobileNav.scss
@@ -1,7 +1,10 @@
 .mobile-nav {
     width: 100%;
     background-color: var(--nav-color);
-    margin-bottom: 35px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    
     * {
         margin: 0;
         box-sizing: 0;
@@ -30,7 +33,7 @@
         width: 100%;
         background-color: var(--text-color-2);
         position: absolute;
-        z-index: 1000;
+        z-index: 3;
     }
     .hidden {
         display: none;
