--- a/src/components/SelectFilter/SelectFilter.scss
+++ b/src/components/SelectFilter/SelectFilter.scss
@@ -1,12 +1,34 @@
 .select-filter {
+
     label {
         display: block;
-        font-size: 11pt;
         font-weight: 600;
         color: var(--dark-grey);
         margin-bottom: 2px;
     }
-    .select-filter-input {
-        width: 160px;
+    @media (min-width: 500px) {
+        label {
+            font-size: 11pt;
+        }
+        .select-filter-input {
+            width: 160px;
+
+            div {
+                font-size: 11pt;
+            }
+        }
+    }
+    @media (max-width: 499px) {
+        
+        label {
+            font-size: 9pt;
+        }
+        .select-filter-input {
+            width: 120px;
+
+            div {
+                font-size: 9pt;
+            }
+        }
     }
 }
