--- a/src/components/Nav/MobileNav/MobileNav.scss
+++ b/src/components/Nav/MobileNav/MobileNav.scss
@@ -61,6 +61,7 @@
         color: black;
         padding: 1.1em;
         font-weight: 700;
+        border: none;
         border-bottom: 1px solid var(--lightgrey);
         display: flex;
         justify-content: space-between;
